--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,8 @@
 /* styles.css */
 /* ======= Base ======= */
 body {
-  font-family: 'Roboto', sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
+  font-family: 'Pangolin', sans-serif;
   color: #545E6C;
   background: #f5f5f5;
   font-size: 14px;
