--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,7 +40,8 @@ a:hover {
 a:focus {
   text-decoration: none;
 }
-p {
+p {  
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   /*text-align: justify;*/
 }
