--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -323,13 +323,21 @@ p {
        -o-transition: all 0.5s ease;
       -ms-transition: all 0.5s ease;
           transition: all 0.5s ease;
+  z-index: 1;
+  position: relative;
 }
 
 .morph:active {
   /*border-radius: 50%;*/
-  -webkit-transform: rotate(360deg);
+  /* -webkit-transform: rotate(360deg);
      -moz-transform: rotate(360deg);
        -o-transform: rotate(360deg);
       -ms-transform: rotate(360deg);
-          transform: rotate(360deg);
+          transform: rotate(360deg); */
+
+  -webkit-transform: scale(2) translate(-125%, 125%) rotate(360deg);
+     -moz-transform: scale(2) translate(-125%, 125%) rotate(360deg);
+       -o-transform: scale(2) translate(-125%, 125%) rotate(360deg);
+      -ms-transform: scale(2) translate(-125%, 125%) rotate(360deg);
+          transform: scale(2) translate(-125%, 125%) rotate(360deg);
 }
