--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -317,7 +317,8 @@ p {
     50% { opacity:0; }
     100% { opacity:1; }
 }
-.morph {
+
+/* .morph {
   -webkit-transition: all 0.5s ease;
      -moz-transition: all 0.5s ease;
        -o-transition: all 0.5s ease;
@@ -325,19 +326,13 @@ p {
           transition: all 0.5s ease;
   z-index: 1;
   position: relative;
-}
+} */
 
-.morph:active {
-  /*border-radius: 50%;*/
-  /* -webkit-transform: rotate(360deg);
-     -moz-transform: rotate(360deg);
-       -o-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-          transform: rotate(360deg); */
+/* .morph:active {
 
   -webkit-transform: scale(2) translate(-125%, 125%) rotate(360deg);
      -moz-transform: scale(2) translate(-125%, 125%) rotate(360deg);
        -o-transform: scale(2) translate(-125%, 125%) rotate(360deg);
       -ms-transform: scale(2) translate(-125%, 125%) rotate(360deg);
           transform: scale(2) translate(-125%, 125%) rotate(360deg);
-}
+} */
